Migrate usages of DatatypeConverter to java.util.Base64
(except usages in OpcUaXmlStreamDecoder)